[gd_scene load_steps=5 format=3 uid="uid://bridievmkjshx"]

[ext_resource type="Script" uid="uid://lpnsfjaqpraw" path="res://scripts/npc.gd" id="1_ytfeu"]
[ext_resource type="PackedScene" uid="uid://1u73rrgn0pmn" path="res://assets/parts/mask/Mask.fbx" id="2_m3lgo"]
[ext_resource type="PackedScene" uid="uid://c64j1n74qle7m" path="res://assets/parts/heads/Head1.fbx" id="3_fvdeh"]
[ext_resource type="PackedScene" uid="uid://0masay15igrl" path="res://assets/parts/accessories/Bowtie.fbx" id="4_efthq"]
[ext_resource type="PackedScene" uid="uid://c07q5pi8ksut5" path="res://assets/parts/arms/Arms1.fbx" id="5_f348p"]
[ext_resource type="PackedScene" uid="uid://8xchb8bxuh8j" path="res://assets/parts/bodies/Body1.fbx" id="6_r3lq0"]
[ext_resource type="PackedScene" uid="uid://c1jkwv2pbtd8m" path="res://assets/parts/bottoms/Bottom1.fbx" id="7_p4h8k"]
[ext_resource type="PackedScene" uid="uid://cw5qmvt7xvqxw" path="res://scenes/entites/robot_model.tscn" id="8_robot_model"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
radius = 0.4
height = 1.8

[node name="NPC" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_ytfeu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
visible = false
mesh = SubResource("CapsuleMesh_1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
fov = 80.0

[node name="InteractionRay" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -2)

[node name="RobotModel" parent="." instance=ExtResource("8_robot_model")]

[node name="NavigationAgent" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
debug_enabled = true

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
